# fake-news-detection

./: .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
app/: app.py
chroma/: chroma_client.py  chroma_manager.py  chroma_query.py  singleton.py
chunk/: split_chunk.py
data_handler/: cleaning_utils.py  data_handler.py  text_cleaning.py
function_chunk/: split_chunk.py
notebooks/: chromadb.ipynb  notebook.ipynb  ollama_to_bdd.ipynb
pipelines/: pipeline.py
prompt/: prompt_builder.py  rag_system.py
tests/: test_chroma_connection.py  test_data_cleaner.py  test_import.py  test_prompt_builder.py  test_split_chunk.py
