[project]
name = "fake-news-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.2.1",
    "ipykernel>=7.0.1",
    "ollama>=0.6.0",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
]

[tool.basedpyright]
typeCheckingMode = "basic"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
useLibraryCodeForTypes = true
